--- a/render.yaml
+++ b/render.yaml
@@ -10,10 +10,14 @@ services:
 #    sizeGB: 3
   envVars:
   - key: WORDPRESS_DB_HOST
-
+    # value: db_host
+    sync: false
   - key: WORDPRESS_DB_NAME
-
+    # value: db_name
+    sync: false
   - key: WORDPRESS_DB_USER
-
+    # value: db_user
+    sync: false
   - key: WORDPRESS_DB_PASSWORD
-
+    # value: db_password
+    sync: false
